@@ -4,9 +4,15 @@ using namespace std;
 
 Field::Field(int r, int c){
 			row = r;
-			c = c;
+			col = c;
 	}
 
 void Field::display(){
 	cout << "Calling field's display\n";
+	for(int i = 0; i < row; i++){
+		for(int j = 0; j < col; j++){
+			cout << "*";
+		}
+		cout << "\n";
+	}
 }
