@@ -3,9 +3,7 @@
 class Field{
 public:
 	int row, col;
-	
 	Field(int r, int c);
 	void display();
-
 };
 #endif
